Fixed PushConfig arguments w.r.t Aerogear-Android 1.2.0